8358578: Small -XX:NMethodSizeLimit triggers "not in CodeBuffer memory" assert in C1

Reviewed-by: kvn, syan, thartmann