src/hotspot/share/c1/c1_Compilation.cpp
@@ -330,7 +330,7 @@ bool Compilation::setup_code_buffer(CodeBuffer* code, int call_stub_estimate) {
   char* locs_buffer = NEW_RESOURCE_ARRAY(char, locs_buffer_size);
   code->insts()->initialize_shared_locs((relocInfo*)locs_buffer,
                                         locs_buffer_size / sizeof(relocInfo));
-  code->initialize_consts_size(Compilation::desired_max_constant_size());
+  code->initialize_consts_size(Compilation::desired_max_constant_size);
   // Call stubs + two deopt handlers (regular and MH) + exception handler
   int stub_size = (call_stub_estimate * LIR_Assembler::call_stub_size()) +
                    LIR_Assembler::exception_handler_size() +
